--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,4 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.schema=classpath:/schema.sql
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.hbm2ddl.import_files=import.sql
+spring.jpa.hibernate.ddl-auto=update
