--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,1 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_reino_animal_test
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.hbm2ddl.import_files=import.sql
